cambios en las imagenes con css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is my personal page for the course WDD 130">
+    <meta name="Author" content="Alan Gonzalez">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Alan Gonzalez|Wdd130</title>
 </head>
@@ -15,10 +17,17 @@
     </nav>
     <main>
         <h1>Alan Gonzalez|Wdd130</h1>
-        <img src="img/cv.jpg" alt="hello im alan Gonzalez" width="200">
+        <img src="images/profile.jpg" alt="hello im alan Gonzalez" width="200">
         <p>Hello im Alan Gonzalez, im from Mar del Plata Argentina, im a students from byu idahoo, 
             and im study for my own react and next js</p>
     </main>
+    <aside>
+        <h2>Mar del plata </h2>
+        <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/HYABABQXONAEHE5GOPHMIM67PM.jpg" alt="">
+        <p>Mar del Plata is a beautiful city because it has many beautiful beaches </p>
+    </aside>
+        
+    
     <footer>
         <p>	&#169; 2024 &#9824; Alan Gonzalez, Mar del plata, Argentina &#9824;</p>
     </footer>    
