page rafting plan

--- a/wwd/site-plan-rafting.html
+++ b/wwd/site-plan-rafting.html
@@ -7,34 +7,44 @@
     <meta name="author" content="description">
     <meta>
     <title>Document</title>
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
     <header>
         <h1>Rafting site plan</h1>
-        <div>Alan javier Gonzalez</div>
+        <div class="Author">Alan javier Gonzalez</div>
     </header>
     <main>
-        <h2>Overview</h2>
-        <h3>Purpose</h3>
-        <p>the purpose text</p>
-        <h3>audience</h3>
-        <p>audience text</p>
-        <h2>Branding</h2>
-        <h3>Website logo</h3>
-        <img src="images/logo.png" alt="Aqui va la imagen">
-        <h2>Style guide</h2>
-        <h3>color palette</h3>
-        <p>element</p>
-        <h3>Typografy</h3>
-        <h4>Normal text</h4>
-        <p>element</p>
-        <h3>element "navigation"</h3>
         <nav>
             <a href="#">Home</a>
             <a href="#">About US</a>
             <a href="#">Trips</a>
             <a href="#">Contact Us</a>
         </nav>
+        <h2>Rafting with fun!!</h2>
+        <h3>Come And fun with us! </h3>
+        <p>We have the experience of more than 10 years so that you come to spend 
+        a day full of adventures in Argentine rafting, come and have fun with us, 
+        you will not regret it!</p>
+        <h3>One river, Many oportunities</h3>
+        <p>Life is stressful, so we have a plan for you who want to get out of 
+            your office for a weekend, 
+            or if you want to come and spend vacations with your family, 
+            we have what you need so you can relax and have a good time!t</p>
+        <h2>Branding</h2>
+        <h3>Website logo</h3>
+        <img src="images/crossedoars.jpeg" alt="Aqui va la imagen">
+        <h2>Style guide</h2>
+        <h3>color palette</h3>
+        <p>Primary=#05CCDA
+            segundo=#FFFFFF
+            tercero=#1E27D1
+        </p>
+        <h3>@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');</h3>
+        <h4>Normal text</h4>
+        <p>element</p>
+        <h3>element "navigation"</h3>
+        
         <h2> wireFrames</h2>
         <h3>Home page wireFrames</h3>
         <img src="" alt="home page example" width="700">
