cambios en imagenes

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -47,9 +47,9 @@
         
         <h2> wireFrames</h2>
         <h3>Home page wireFrames</h3>
-        <img src="" alt="home page example" width="700">
+        <img src="images/kisspng-rafting-whitewater-clip-art-river-vector-5adc0278f17565.365266351524367992989.jpg" alt="home page example" width="700">
         <h3>About us Page Wireframe</h3>
-        <img src="" alt="About us example wireFrames" width="700">
+        <img src="images/kisspng-rafting-whitewater-clip-art-river-vector-5adc0278f17565.365266351524367992989.jpg" alt="About us example wireFrames" width="700">
         
     </main>
     <footer>
