agreegando mas lorem al texto

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <p>Hello im Alan Gonzalez, im from Mar del Plata Argentina, im a students from byu idahoo, 
             and im study for my own react and next js
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis excepturi aliquam ut alias 
-        reprehenderit laborum asperiores laboriosam quidem quaerat perspiciatis. Debitis suscipit fugit sunt explicabo, quibusdam corrupti quis eaque perspiciatis.</p>
+        reprehenderit laborum asperiores laboriosam quidem quaerat perspiciatis. Debitis suscipit fugit sunt explicabo,
+         quibusdam corrupti quis eaque perspiciatis.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias obcaecati aliquam natus laudantium ex ipsa magni iste, porro ab quos provident sed itaque eaque quo facilis ullam debitis nostrum iusto!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias praesentium ad itaque blanditiis dolorum exercitationem vero assumenda maxime quae laboriosam explicabo ullam quod, deserunt odio tempore soluta hic unde voluptates.
+    Recusandae, incidunt sit enim eos ipsam laboriosam commodi perferendis cum repudiandae consectetur! Aliquam nesciunt doloribus sit, debitis beatae quam, itaque vel fugit incidunt dignissimos non pariatur quasi sed adipisci illum!
+    Rerum tempore fugiat quos inventore, sunt molestiae. Quaerat delectus porro alias, quas dolorum minima quae id! Amet esse delectus fugit distinctio sed corrupti ducimus, cum odio facere, quibusdam, ullam rerum!</p>
 <ul class="box">
     <li> <a href="https://www.churchofjesuschrist.org/temples/details/mendoza-argentina-temple?lang=eng" target="_blank" rel="noopener noreferrer">Mendoza Argentina Temple</a></li>
     <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng" target="_blank" rel="noopener noreferrer">Buenos Argentina Temple</a></li>
