cambios en el menu hoover

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="description">
-    <meta>
-    <title>Document</title>
+    <meta name="Alan Gonzalez" content="description">
+    <meta name="description" content="this page is a site for Wdd130 ">
+    <title>RaftingSite</title>
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
@@ -41,10 +41,11 @@
             tercero=#1E27D1
         </p>
         <h3>@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');</h3>
+        <h4>HEading </h4>
         <h4>Normal text</h4>
         <p>element</p>
         <h3>element "navigation"</h3>
-        
+        <h4>coloring example</h4>
         <h2> wireFrames</h2>
         <h3>Home page wireFrames</h3>
         <img src="images/kisspng-rafting-whitewater-clip-art-river-vector-5adc0278f17565.365266351524367992989.jpg" alt="home page example" width="700">
