--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Author" content="alan Gonzalez">
+    <meta name="author" content="Alan Gonzalez">
     <meta name="description" content="this page is a site for Wdd130 ">
     <title>RaftingSite</title>
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
