--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <a href="#">Home</a>
             <a href="wwr/">white water rafting webside</a>
             <a href="wwr/site-plan-rafting.html"> white water rafting site plan</a>
-            <a href="https://www.facebook.com/alanjavier.gonzalez.5" target="_blank">Facebook Page</a>
-            <a href="https://www.linkedin.com/in/alan-gonzalez87/" target="_blank">linkedin profile</a>
+            <a href="https://www.facebook.com/alanjavier.gonzalez.5" target="_blank">Facebook </a>
+            <a href="https://www.linkedin.com/in/alan-gonzalez87/" target="_blank">Linkedin</a>
         </nav>
     </header>
-   
+   <div class="grid">
     <main>
         <h1>Alan Gonzalez|Wdd130</h1>
         <img src="images/profile.jpg" alt="hello im alan Gonzalez" width="200">
@@ -44,8 +44,7 @@
         <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/HYABABQXONAEHE5GOPHMIM67PM.jpg" alt="">
         <p>Mar del Plata is a beautiful city because it has many beautiful beaches </p>
     </aside>
-        
-    
+   </div>
     <footer>
         <p>	&#169; 2024 &#9824; Alan Gonzalez, Mar del plata, Argentina &#9824;</p>
     </footer>  
