--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,8 +12,9 @@
 <body>
 <header>
     <img src="images/kisspng-rafting-whitewater-clip-art-river-vector-5adc0278f17565.365266351524367992989.jpg" alt="">
+    
     <nav>
-        <ul>
+        <ul class="navigation">
             <li><a href="site-plan-rafting.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Trips</a></li>
@@ -48,10 +49,15 @@
         <h2>Adventures Awaits You</h2>
         <div class="container">
             <img src="images/rafting1.jpg" alt="">
+            <figcaption>Adventures in cordoba</figcaption>
             <img src="images/rafting2.jpg" alt="">
+            <figcaption>Pasion in salta</figcaption>
             <img src="images/rafting3.jpg" alt="">
+            <figcaption>Adventures in tucuman </figcaption>
             <img src="images/rafting4.jpg" alt="">
+            <figcaption>pasion in Rio negro</figcaption>
             <img src="images/rafting5.jpg" alt="">
+            <figcaption>Adventures in Misiones</figcaption>
         </div>
        
     </section>
