--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="About us description"/>
     <meta name="author" content="Alan Gonzalez"/>
-    <title>About</title>
+    <title>About us</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -48,16 +48,25 @@
     <section>
         <h2>Adventures Awaits You</h2>
         <div class="container">
-            <img src="images/rafting1.jpg" alt="">
+           <figure> <img src="images/rafting1.jpg" alt="">
             <figcaption>Adventures in cordoba</figcaption>
+        </figure>
+        <figure>
             <img src="images/rafting2.jpg" alt="">
             <figcaption>Pasion in salta</figcaption>
+        </figure>
+        <figure>
             <img src="images/rafting3.jpg" alt="">
             <figcaption>Adventures in tucuman </figcaption>
+        </figure>
+        <figure>
             <img src="images/rafting4.jpg" alt="">
             <figcaption>pasion in Rio negro</figcaption>
+        </figure>
+        <figure>
             <img src="images/rafting5.jpg" alt="">
             <figcaption>Adventures in Misiones</figcaption>
+        </figure>
         </div>
        
     </section>
