--- a/quiz.html
+++ b/quiz.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my personal page for the course WDD 130">
     <meta name="author" content="Alan Gonzalez">
-    <link rel="stylesheet" href="/wwr/styles/quiz.css">
-    <title>Formulario</title>
+    <link rel="stylesheet" href="styles/quiz.css">
+    <title>Form</title>
 </head>
 <body>
     
@@ -16,15 +16,15 @@
             <h1>Basic html and css quiz</h1>
             <label class="box">1-What does the acronym css stand for?</label>
             <br>
-            <input type="text" id="q1"  class="field"><br>
+            <input type="text" id="q1" name="q1" class="field"><br>
             <label class="box">2-What is the bottom margin given this declaration?</label><br>
             <h2>
                 margin:10px 5px 15px;
             </h2>
-            <input type="number" id="q2" class="field"><br>
+            <input type="number" id="q2" name="q2" class="field"><br>
 
             <label class="box">3-Which of the follow is a valid Css coment</label><br>
-            <select name="q3" id="q3" class="select">
+            <select name="q3" id="q3"  class="select">
                 <option value="" selected disabled>Select one</option>
                 <option value="perro">#</option>
                 <option value="perro">*</option>
@@ -33,7 +33,7 @@
             <br>
 
             <label class="box">4-How are id and class attributes selected in css?</label><br>
-            <textarea class="field" cols="30" rows="10" placeholder="Escribe tu respuesta"></textarea>
+            <textarea class="field" id="q4" name="q4" cols="30" rows="10" placeholder="Escribe tu respuesta..."></textarea>
             <br>
             <button type="submit">submit quiz</button>
         </form>
