--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is my personal page for the course WDD 130">
+    <meta name="description" content="Quiz test">
     <meta name="author" content="Alan Gonzalez">
     <link rel="stylesheet" href="styles/quiz.css">
     <title>Form</title>
