--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Quiz test">
     <meta name="author" content="Alan Gonzalez">
     <link rel="stylesheet" href="styles/quiz.css">
-    <title>Form</title>
+    <title>Quiz with html Css</title>
 </head>
 <body>
     
