--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
     <aside class="box">
         <h2>Mar del plata </h2>
-        <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/HYABABQXONAEHE5GOPHMIM67PM.jpg" alt="">
+        <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/HYABABQXONAEHE5GOPHMIM67PM.jpg" alt="Mar del plata">
         <p>Mar del Plata is a beautiful city because it has many beautiful beaches </p>
     </aside>
    </div>
