--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,7 +19,7 @@
             <a href="#">Home</a>
             <a href="#">About US</a>
             <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
         <h2>Rafting with fun!!</h2>
         <h3>Come And fun with us! </h3>
