Cambios en la pagina about

--- a/wwr/Contact.html
+++ b/wwr/Contact.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Contact us description"/>
-    <meta name="author" content="Alan Gonzalez"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact us description">
+    <meta name="author" content="Alan Gonzalez">
     <title>Contact</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
