--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="About us description"/>
-    <meta name="author" content="Alan Gonzalez"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About us description">
+    <meta name="author" content="Alan Gonzalez">
     <title>About us</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -27,15 +27,14 @@
     <div class="hero">
         <img src="images/image-hero.jpg" alt="">
         <h1>Alan Rafting Company</h1>
-            <article>
-                
+            <article>  
                 <img src="images/happines.jpg" alt="rafting" class="imagen">
-                <p class="parrafo">Lorem ipsum dolor sit amet consectetur 
+                <h1 class="parrafo">Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Iusto earum quos eos 
                     ducimus animi, adipisci fugiat veniam laboriosam 
                     facere, voluptates vitae aperiam 
                     alias ullam reprehenderit tenetur labore cupiditate 
-                    rerum omnis?</p>
+                    rerum omnis?</h1>
                 
             </article>
     </div>
@@ -75,14 +74,13 @@
     <p>	&#169; 2023 &#9824; Alan Rafting Company| Alan Gonzalez &#9824;</p>
     <nav class="socialLinks">
         <a href="www.instagram.com">
-            <img src="images/3225191_app_instagram_logo_media_popular_icon.png" alt="">
+        <img src="images/3225191_app_instagram_logo_media_popular_icon.png" alt="">
         </a>
         <a href="www.facebook.com">
-            <img src="images/3377045_facebook_logo_media_social_icon.png" alt="">
+        <img src="images/3377045_facebook_logo_media_social_icon.png" alt="">
         </a>
         <a href="www.linkedin.com">
-            <img src="images/4362961_linkedin_social media_icon.png" alt="">
-        </a>
+        <img src="images/4362961_linkedin_social media_icon.png" alt=""></a>
     </nav>
 </footer> 
 </body>
