cambio en espacio de la imagen y el h2 line 32

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,7 @@
         <h1>Alan Rafting Company</h1>
             <article>  
                 <img src="images/happines.jpg" alt="rafting" class="imagen">
-                <h1 class="parrafo">Lorem ipsum dolor sit amet consectetur 
+                <h2 class="parrafo">Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Iusto earum quos eos 
                     ducimus animi, adipisci fugiat veniam laboriosam 
                     facere, voluptates vitae aperiam 
@@ -80,7 +80,8 @@
         <img src="images/3377045_facebook_logo_media_social_icon.png" alt="">
         </a>
         <a href="www.linkedin.com">
-        <img src="images/4362961_linkedin_social media_icon.png" alt=""></a>
+            <img src="images/4362961_linkedin_social_media_icon.png" alt="">
+        </a>
     </nav>
 </footer> 
 </body>
