terminada pagina trips

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -16,9 +16,9 @@
     </header>
     <main>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About US</a>
-            <a href="#">Trips</a>
+            <a href="site-plan-rafting.html">Home</a>
+            <a href="about.html">About US</a>
+            <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
         <h2>Rafting with fun!!</h2>
