--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,15 +13,14 @@
 <header>
     <img src="images/kisspng-rafting-whitewater-clip-art-river-vector-5adc0278f17565.365266351524367992989.jpg" alt="">
     
-    <nav>
-        <ul class="navigation">
+    <nav class="navigation">
+        <ul>
             <li><a href="site-plan-rafting.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Trips</a></li>
-            <li><a href="#">contacts</a> </li> 
-        </ul>
-         
-    </nav>    
+            <li><a href="about.html">About</a></li>
+            <li><a href="trips.html">Trips</a></li>
+            <li><a href="contact.html">contacts</a> </li> 
+        </ul>      
+    </nav>     
 </header>
 <main>
     <div class="hero">
@@ -85,17 +84,15 @@
 </main>
 <footer>
     <p>	&#169; 2023 &#9824; Alan Rafting Company| Alan Gonzalez &#9824;</p>
-    <div>
-         <a href="www.instagram.com">
-            <img src="images/3225191_app_instagram_logo_media_popular_icon.png" alt="">
-        </a>
-        <a href="www.facebook.com">
-            <img src="images/3377045_facebook_logo_media_social_icon.png" alt="">
-        </a>
-        <a href="www.linkedin.com">
-            <img src="images/4362961_linkedin_social media_icon.png" alt="">
-        </a>
-    </div>
+    <ul class="iconos-redes-sociales">
+        <li><a href="www.instagram.com">
+        <img src="images/3225191_app_instagram_logo_media_popular_icon.png" alt="icono1"></a></li>
+        <li><a href="www.facebook.com">
+        <img src="images/3377045_facebook_logo_media_social_icon.png" alt="icono2">
+        </a></li>
+       <li><a href="www.linkedin.com">
+        <img src="images/4362961_linkedin_social_media_icon.png" alt="icono3"></a></li>
+    </ul>
 </footer> 
 </body>
 </html>
