--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,7 +15,7 @@
     
     <nav class="navigation">
         <ul>
-            <li><a href="site-plan-rafting.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="trips.html">Trips</a></li>
             <li><a href="contact.html">contacts</a> </li> 
@@ -41,15 +41,15 @@
         <h2>Work with us</h2>
         <div class="container">
            <figure> 
-            <img src="images/Chica Feliz.JPG" alt="">
+            <img src="images/ChicaFeliz.JPG" alt="">
             <figcaption>Sasha Recepcionist</figcaption>
         </figure>
         <figure>
-            <img src="images/chico feliz.JPG" alt="">
+            <img src="images/chico_feliz.JPG" alt="">
             <figcaption>Eric Tourist Guide and cofounder</figcaption>
         </figure>
         <figure>
-            <img src="images/chico feliz 2.JPG" alt="">
+            <img src="images/chicofeliz 2.JPG" alt="">
             <figcaption>Jhon Seo and Tourist guide </figcaption>
         </figure>
         </div>
@@ -57,7 +57,7 @@
     </section>
     <section>
         <h2>Contact us</h2>
-        <form action="" class="form">
+        <form class="form">
             
             <label class="box">Nombre</label>
             <br>
