--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -14,7 +14,7 @@
     
     <nav>
         <ul class="navigation">
-            <li><a href="site-plan-rafting.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="trips.html">Trips</a></li>
             <li><a href="contact.html">contacts</a> </li> 
