--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -79,6 +79,8 @@
             </a></li>
            <li><a href="www.linkedin.com">
             <img src="images/4362961_linkedin_social_media_icon.png" alt="icono3"></a></li>
+            <li><a href="https://app.moqups.com/Gz2eoqXSfJGj4NCSmZW183N9hjz86wzJ/view/page/ad64222d5">
+                <img src="images/wireframe.png" alt="icono4"></a></li>
         </ul>
     </footer> 
 </main>
