--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">white water rafting webside</a>
+            <a href="wwr/index.html">white water rafting webside</a>
             <a href="wwr/site-plan-rafting.html"> white water rafting site plan</a>
             <a href="https://www.facebook.com/alanjavier.gonzalez.5" target="_blank">Facebook </a>
             <a href="https://www.linkedin.com/in/alan-gonzalez87/" target="_blank">Linkedin</a>
