--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,7 +23,7 @@
         </nav>    
     </header>
     <main>
-        <div class="hero">
+        <div class="hero1">
             <img src="images/image-hero.jpg" alt="">
             <h2>Adventures is waiting for you</h2>
             <p>What are you waiting for? life is too short not to live it in adventure</p>
